--- a/templates/about.html
+++ b/templates/about.html
@@ -5,10 +5,10 @@
   <div>
     <img
       class="cairo-airport"
-      src="/static/cai-airport.jpg"
-      alt="Me and my brother in Cairo International Airport"
+      src="/static/atpyramids.jpg"
+      alt="My brother and I at the pyramids"
     />
-    <p class="img-disc">My brother and I in Cairo International Airport.</p>
+    <p class="img-disc">My brother (right) and I (left) at the pyramids.</p>
   </div>
   <p class="about-text first">
     Hey everyone, my name is Omar Ozalp and I'm a senior in high school. I spent
