--- a/templates/find-a-tutor.html
+++ b/templates/find-a-tutor.html
@@ -4,7 +4,26 @@
     <div class="main">
       <h1 class="slogan">Work with the best tutors</h1>
       <p class="sub-slogan">Filter through our array of tutors to find one that fits your needs.</p>
-
+        <div class="disclaimer">
+        <p >Please note that these tutors aren't real, except for myself :&#41, and this is just a template for the final project.</p>
+        <button class="disclaimer-btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="disclaimer-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6 18 18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
+      </div>
+      
       <div class="grid">
         <div class="selector">
           <span class="cat">Categories</span>
