--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,10 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JB6XS52H7D"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-JB6XS52H7D");
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/static/find-tutor.css" />
@@ -15,6 +32,7 @@
     <link rel="stylesheet" href="/static/styles.css" />
     <link rel="stylesheet" href="/static/queries.css" />
     <script defer src="/static/script.js"></script>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
@@ -86,7 +104,14 @@
         <div class="nav-right">
           {% if session["name"] %}
           <div class="logged-in">
-            <p>{{session["name"]}}</p>
+            <div class="open">
+              <button class="user-name">{{session["name"]}}</button>
+              <div class="user-info hide">
+                <li>Settings</li>
+                <li>Text</li>
+                <li>Log Out</li>
+              </div>
+            </div>
             <form action="/logout">
               <button class="btn-logout" type="submit">Log out</button>
             </form>
