--- a/templates/listing.html
+++ b/templates/listing.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block title %} Join Us {% endblock %}{% block
+{% extends "layout.html" %} {% block title %} Listing {% endblock %}{% block
 body %} {% for tutor in tutors %}
 <div class="listing-main">
   <img src="{{tutor['image']}}" alt="" />
