--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block title %} Join Us {% endblock %}{% block
+{% extends "layout.html" %} {% block title %} Log In {% endblock %}{% block
 login %}
 <a class="sign-up" href="/signup">Sign Up</a>
 {% endblock %}{% block body %}
