--- a/static/log-in.css
+++ b/static/log-in.css
@@ -61,3 +61,48 @@ FONT SIZE SYSTEM (px)
   cursor: pointer;
   transform: translateY(-3px);
 }
+
+.pas_strength {
+  align-self: flex-start;
+  margin-bottom: -12px;
+}
+.strength {
+  border-radius: 8px;
+  width: 100%;
+  height: 6px;
+  background-color: #ccd2d9;
+  position: relative;
+}
+
+.strength-bar {
+  border-radius: 8px;
+  position: absolute;
+}
+
+.strength-bar-weak {
+  position: absolute;
+  width: 33%;
+  height: 6px;
+  background-color: #ff0000;
+  transition: all ease 0.5s;
+}
+
+.strength-bar-medium {
+  position: absolute;
+  width: 66%;
+  height: 6px;
+  background-color: #ffbd31;
+  transition: all ease 0.5s;
+}
+
+.strength-bar-strong {
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  background-color: #008000;
+  transition: all ease 0.5s;
+}
+
+#str {
+  font-weight: 500;
+}
