--- a/static/old-queries.css
+++ b/static/old-queries.css
@@ -63,7 +63,6 @@ FONT SIZE SYSTEM (px)
 
   .cairo-airport {
     width: 250px;
-    height: 250px;
   }
 
   .about-div {
@@ -87,7 +86,6 @@ FONT SIZE SYSTEM (px)
   }
 
   .pop-up {
-    z-index: 100;
     color: #001f3f;
     display: flex;
     flex-direction: column;
@@ -98,11 +96,12 @@ FONT SIZE SYSTEM (px)
     top: 0;
     left: 0;
     background-color: rgba(255, 255, 255, 0.9);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    transform: translateX(-100%);
+    transform: translateX(100%);
 
-    /* display: none; */
+    /* allows no transitions
+    display: none; */
 
     opacity: 0;
     pointer-events: none;
@@ -119,7 +118,7 @@ FONT SIZE SYSTEM (px)
 
   .btn-mobile-nav {
     position: relative;
-    z-index: 1000;
+    z-index: 100;
   }
   .btn-pop-up-open .mobile-nav-icon[name="close-icon"] {
     display: block;
@@ -128,99 +127,9 @@ FONT SIZE SYSTEM (px)
   .btn-pop-up-open .mobile-nav-icon[name="open-icon"] {
     display: none;
   }
-
-  .listing-main {
-    max-width: 600px;
-  }
-
-  .reserve-form {
-    grid-column: 1/-1;
-    justify-self: center;
-  }
-
-  .fields {
-    grid-column: 2/4;
-    justify-self: right;
-  }
-  .booking {
-    row-gap: 32px;
-    grid-column: 1/-1;
-    grid-row: 4/5;
-    grid-template-columns: 1fr 1fr 4fr;
-  }
-  .listing-rating {
-    gap: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-self: left;
-    grid-column: 2;
-    grid-row: 1;
-  }
-
-  .notification {
-    grid-row: 1/2;
-    grid-column: 3;
-  }
-
-  .line {
-    display: none;
-  }
 }
 
 @media (max-width: 600px) {
-  .about-div {
-    max-width: 400px;
-  }
-
-  .about-text {
-    font-size: 16px;
-  }
-
-  .first {
-    grid-row: 2;
-    grid-column: 1/-1;
-  }
-
-  .about-div div {
-    width: 400px;
-    grid-column: 1/3;
-    grid-row: 3;
-    justify-self: center;
-  }
-  .cairo-airport {
-    width: 400px;
-    height: 200px;
-  }
-  .listing-description,
-  .prof {
-    grid-column: 1/-1;
-  }
-  .listing-main {
-    max-width: 400px;
-  }
-
-  .listing-main img {
-    justify-self: center;
-    grid-column: 1/4;
-    grid-row: 1;
-  }
-
-  .fields {
-    margin: 0;
-    grid-column: 1/-1;
-    grid-row: 4;
-    justify-self: center;
-  }
-
-  .booking {
-    grid-row: 5;
-  }
-  .form {
-    grid-template-columns: 1fr;
-  }
-  .tutoring-journey {
-    max-width: 500px;
-  }
   .tutoring-categories {
     grid-template-columns: 1fr;
     column-gap: 18px;
@@ -228,59 +137,5 @@ FONT SIZE SYSTEM (px)
 
   .category {
     max-width: 100%;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (max-width: 400px) {
-  .booking {
-    grid-template-columns: 1fr 1fr;
-    row-gap: 12px;
-  }
-
-  .listing-rating {
-    gap: 6px;
-    justify-self: right;
-    flex-direction: row;
-    align-items: start;
-  }
-
-  .notification {
-    grid-row: 2;
-    grid-column: 1/-1;
-    margin-bottom: 0;
-  }
-  .nav-left {
-    gap: 8px;
-  }
-  .nav-right {
-    gap: 16px;
-  }
-  .nav {
-    margin-bottom: 48px;
-    font-size: 12px;
-  }
-
-  .main-statement {
-    margin-bottom: 48px;
-  }
-
-  .statement {
-    font-size: 48px;
-    letter-spacing: 1px;
-  }
-  .side-statement {
-    font-size: 18px;
-  }
-
-  .main {
-    max-width: 350px;
-    margin: auto;
-  }
-  .grid {
-    grid-template-columns: 1fr;
   }
 }
