--- a/static/styles.css
+++ b/static/styles.css
@@ -124,7 +124,7 @@ body {
   font-size: 64px;
   line-height: 1.1;
   letter-spacing: 1px;
-  margin-bottom: 12px;
+  margin-bottom: 24px;
 }
 
 .side-statement {
@@ -497,8 +497,10 @@ body {
 
 .cairo-airport {
   grid-column: 2;
-  max-width: 350px;
+  width: 350px;
+  height: 350px;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .first {
@@ -519,4 +521,71 @@ body {
 .reserve-form {
   grid-column: 1/-1;
   justify-self: center;
+}
+
+.disclaimer {
+  width: 100%;
+  font-size: 14px;
+  align-items: flex-start;
+  margin-bottom: 24px;
+  font-family: "ROBOTO MONO";
+  display: flex;
+  gap: 12px;
+  color: red;
+}
+
+.disclaimer-btn {
+  border: none;
+  background: none;
+  width: fit-content;
+  transition: transform ease 0.3s;
+}
+
+.disclaimer-btn:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+}
+
+.disclaimer-icon {
+  width: 20px;
+  color: red;
+}
+
+.open {
+  position: relative;
+}
+.user-name {
+  text-transform: uppercase;
+  color: #27272a;
+  border: none;
+  font-size: 18px;
+  background-color: transparent;
+}
+
+.user-name:hover {
+  cursor: pointer;
+}
+
+.user-info {
+  border-radius: 8px;
+  top: 36px;
+  right: 0;
+  box-shadow: 0px 0px 6px 3px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  list-style: none;
+  padding: 24px;
+  background-color: white;
+  position: absolute;
+}
+
+.user-info::before {
+  left: 75%;
+  top: -10px;
+  content: "";
+  position: absolute;
+  height: 24px;
+  width: 24px;
+  background-color: white;
+  transform: rotate(45deg);
+  box-shadow: -2px -2px 3px rgba(0, 0, 0, 0.1);
 }
